...

// MARK: - DishType

/// Категории рецептов
enum DishType: String {
    /// Салат
    case salad
    /// Суп
    case soup
    /// Курица
    case chicken
    /// Мясо
    case meat
    /// Рыба
    case fish
    /// Гарниры
    case sideDish
    /// Блины
    case pancake
    /// Напитки
    case drinks
...
